@@ -4,7 +4,7 @@ Feature: Deploy
     @vcr site-deploy
     Given I am authenticated
     And a site named "[[test_site_name]]"
-    When I run "terminus site deploy --site=[[test_site_name]] --env=test --clone-live-content --note='Deploy test'"
+    When I run "terminus site deploy --site=[[test_site_name]] --env=test --sync-content --note='Deploy test'"
     Then I should get "."
     Then I should get "."
     Then I should get:
